ast/src/snapshots/transmute_ast__lexer__tests__next_slash.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: Slash,
    span: 1:1; [0, 1],
}
