ast/src/snapshots/transmute_ast__lexer__tests__next_smaller_equal.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: SmallerEqual,
    span: 1:1; [0, 2],
}
