ast/src/snapshots/transmute_ast__lexer__tests__next_smller.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: Smaller,
    span: 1:1; [0, 1],
}
