ast/src/snapshots/transmute_ast__lexer__tests__next_star.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: Star,
    span: 1:1; [0, 1],
}
