ast/src/snapshots/transmute_ast__lexer__tests__next_string_empty.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: String(
        "",
    ),
    span: 1:1; [0, 2],
}
