ast/src/snapshots/transmute_ast__lexer__tests__next_string_invalid_escape.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: String(
        "g",
    ),
    span: 1:1; [0, 4],
}
