ast/src/snapshots/transmute_ast__lexer__tests__next_string_newline_escaped.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: String(
        "line1\nline2",
    ),
    span: 1:1; [0, 14],
}
