ast/src/snapshots/transmute_ast__lexer__tests__next_string_not_closed.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: String(
        "hello",
    ),
    span: 1:1; [0, 6],
}
