ast/src/snapshots/transmute_ast__lexer__tests__next_string_with_backslash.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: String(
        " \\ ",
    ),
    span: 1:1; [0, 6],
}
